--- a/worker/package.json
+++ b/worker/package.json
@@ -1,8 +1,22 @@
 {
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
+    "@types/node": "^14.11.2",
+    "gts": "^3.1.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "amqplib": "^0.8.0",
+    "dotenv": "^16.0.0",
     "winston": "^3.6.0"
+  },
+  "scripts": {
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   }
 }
