--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jshint": "^2.13.4"
+    "@types/bcrypt": "^5.0.0",
+    "gts": "^3.1.0",
+    "typescript": "^4.6.2"
   }
 }
