--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,6 @@
 	"description": "",
 	"main": "api.js",
 	"scripts": {
-		"lint": "gts lint",
-		"clean": "gts clean",
-		"compile": "tsc",
-		"fix": "gts fix",
-		"prepare": "npm run compile",
-		"pretest": "npm run compile",
-		"posttest": "npm run lint",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
@@ -32,6 +25,9 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
-		"@types/node": "^17.0.21"
-	}
+		"@types/node": "^17.0.21",
+		"@types/bcrypt": "^5.0.0",
+		"gts": "^3.1.0",
+		"typescript": "^4.6.2"
+		}
 }
