--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,5 +5,5 @@
 		"outDir": "build",
 		"esModuleInterop": true
 	},
-	"include": ["backend/**/*.ts", "frontend/**/*.ts"]
+	"include": ["./src/**/*.ts"]
 }
