--- a/backend/package.json
+++ b/backend/package.json
@@ -10,24 +10,27 @@
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
+		"@types/crypto-js": "^4.1.1",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"cookie": "^0.4.2",
+		"crypto-js": "^4.1.1",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
 		"helmet": "^5.0.2",
 		"jsonschema": "^1.4.0",
 		"mongoose": "^6.2.4",
+		"octokit": "^1.7.1",
 		"passport": "^0.5.2",
 		"path": "^0.12.7"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
 		"@types/node": "^17.0.21",
-		"@types/bcrypt": "^5.0.0",
 		"gts": "^3.1.0",
 		"typescript": "^4.6.2"
-		}
+	}
 }
