--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "extends": "./node_modules/gts/tsconfig-google.json",
+    "rootDir": ".",
+    "outDir": "build"
   },
   "include": [
-    "src"
+    "src/**/*.ts",
+    "test/**/*.ts"
   ]
 }
