--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
 		"cookie": "^0.4.2",
 		"crypto-js": "^4.1.1",
 		"express": "^4.17.3",
+		"express-graphql": "^0.12.0",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
 		"helmet": "^5.0.2",
