--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "relay": "^0.8.0-1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -48,8 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^14.11.2",
     "gts": "^3.1.0",
     "typescript": "^4.0.3",
-    "@types/node": "^14.11.2"
+    "relay-compiler": "^13.1.1"
   }
 }
