--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "api.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon --exec \"ts-node \" ./src/api.ts"
 	},
 	"author": "",
 	"license": "ISC",
@@ -13,8 +14,10 @@
 		"@types/crypto-js": "^4.1.1",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
+		"connect-mongo": "^4.6.0",
 		"cookie": "^0.4.2",
 		"crypto-js": "^4.1.1",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
@@ -23,7 +26,10 @@
 		"mongoose": "^6.2.4",
 		"octokit": "^1.7.1",
 		"passport": "^0.5.2",
-		"path": "^0.12.7"
+		"passport-github2": "^0.1.12",
+		"path": "^0.12.7",
+		"ts-node": "^10.7.0",
+		"winston": "^3.6.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
