obfuscate secrets...duh

--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
-GH_CLIENT_ID=Iv1.b04ac29ef47939d3
-GH_CLIENT_SECRET=49667a238ca5532b419cdb59ca4adff4bdcc5c56
+GH_CLIENT_ID=secret
+GH_CLIENT_SECRET=secret
 # the url where this app is deployed.
-URL=https://smee.io/mi7tlYZpEcEnYmO0
-DB_USER=sans-nom
-DB_PASS=c1Mw45lEHOxfWCuU
-DB_HOST=cluster0.zsx14.mongodb.net
-DEV_DB_NAME=dev_sansnom
-PROD_DB_NAME=prod_sansnom
+URL=secret
+DB_USER=secret
+DB_PASS=secret
+DB_HOST=secret
+DEV_DB_NAME=secret
+PROD_DB_NAME=secret
 DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
-SESSION_SECRET=Dr1IWDJj92FNQAMEtUz7fC3MZFwdl
+SESSION_SECRET=secret
 NODE_ENV=development
