--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@ URL=secret
 DB_USER=secret
 DB_PASS=secret
 DB_HOST=secret
+DB_PORT=
 DEV_DB_NAME=secret
 PROD_DB_NAME=secret
 DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
