fixed some issues with worker, added dockerfile for backend, more progress with auth, added nginx config

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -11,6 +11,7 @@ ADD tsconfig*.json /worker/
 RUN npm install && npm install typescript -g
 COPY .env /worker
 COPY . /worker
+RUN chmod +x /worker/src/render/gource.sh
 RUN npm run compile
 
 # TODO: Remove this out from Dockerfile.prod
