--- a/backend/package.json
+++ b/backend/package.json
@@ -5,25 +5,33 @@
 	"main": "api.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon --exec \"ts-node \" ./src/api.ts"
+		"dev": "nodemon --exec \"ts-node \" ./src/api.ts",
+		"build" : "tsc -p ."
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
+		"@types/cors": "^2.8.12",
 		"@types/crypto-js": "^4.1.1",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"connect-mongo": "^4.6.0",
 		"cookie": "^0.4.2",
+		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
+		"csurf": "^1.11.0",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
 		"helmet": "^5.0.2",
+		"html": "^1.0.0",
 		"jsonschema": "^1.4.0",
+		"mongodb": "4.3.1",
 		"mongoose": "^6.2.4",
+		"node": "^17.5.0",
+		"nodemon": "^2.0.15",
 		"octokit": "^1.7.1",
 		"passport": "^0.5.2",
 		"passport-github2": "^0.1.12",
@@ -33,6 +41,8 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
 		"@types/node": "^17.0.21",
