--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,8 +50,11 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "autoprefixer": "^10.4.2",
     "gts": "^3.1.0",
-    "typescript": "^4.0.3",
-    "relay-compiler": "^13.1.1"
+    "postcss": "^8.4.8",
+    "relay-compiler": "^13.1.1",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.0.3"
   }
 }
