--- a/worker/package.json
+++ b/worker/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.21",
+    "ajv": "^8.10.0",
     "amqplib": "^0.8.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
