--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
 		"@types/crypto-js": "^4.1.1",
+		"amqplib": "^0.8.0",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"cookie": "^0.4.2",
@@ -23,9 +24,11 @@
 		"mongoose": "^6.2.4",
 		"octokit": "^1.7.1",
 		"passport": "^0.5.2",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"winston": "^3.6.0"
 	},
 	"devDependencies": {
+		"@types/amqplib": "^0.8.2",
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
