--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
 		"body-parser": "^1.19.2",
 		"cookie": "^0.4.2",
 		"crypto-js": "^4.1.1",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
