Add graphql renderVideo

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,8 @@
-MONGO_URL=mongodb://root:password@mongo:27017/
+MONGO_URL=mongodb://root:password@localhost:27017/
+PORT=8080
+
+GRAPHIQL=true
 
 # Queue Config
-QUEUE_URL=amqp://rabbitmq:5672
+QUEUE_URL=amqp://localhost:5672
 QUEUE_NAME=render
