--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
 		"crypto-js": "^4.1.1",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"express-graphql": "^0.12.0",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
+		"graphql": "^15.8.0",
 		"helmet": "^5.0.2",
 		"jsonschema": "^1.4.0",
 		"mongoose": "^6.2.4",
