--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
 		"@types/crypto-js": "^4.1.1",
+		"@types/passport": "^1.0.7",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"connect-mongo": "^4.6.0",
 		"cookie": "^0.4.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
 		"csurf": "^1.11.0",
