--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,14 @@
 GH_CLIENT_ID=secret
 GH_CLIENT_SECRET=secret
+GH_CALLBACK_URL=secret
+# the base url where this app is deployed.
 URL=secret
 DB_USER=secret
 DB_PASS=secret
 DB_HOST=secret
-DB_PORT=
+DB_PORT=secret
 DEV_DB_NAME=secret
 PROD_DB_NAME=secret
 DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
 SESSION_SECRET=secret
+NODE_ENV=development
