--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,19 @@
+PORT=8080
+GRAPHIQL=true
+
+# Queue Config
+QUEUE_URL=amqp://localhost:5672
+QUEUE_NAME=render
+
+# GitHub Config
 GH_CLIENT_ID=secret
 GH_CLIENT_SECRET=secret
 GH_CALLBACK_URL=secret
+
 # the base url where this app is deployed.
 URL=secret
+
+# Database Config
 DB_USER=secret
 DB_PASS=secret
 DB_HOST=secret
@@ -10,5 +21,6 @@ DB_PORT=secret
 DEV_DB_NAME=secret
 PROD_DB_NAME=secret
 DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
+
 SESSION_SECRET=secret
 NODE_ENV=development
