--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
 		"@types/crypto-js": "^4.1.1",
-		"amqplib": "^0.8.0",
 		"@types/passport": "^1.0.7",
+		"amqplib": "^0.8.0",
+		"apollo-server": "^3.6.4",
+		"apollo-server-core": "^3.6.4",
+		"apollo-server-express": "^3.6.4",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"connect-mongo": "^4.6.0",
@@ -25,7 +28,6 @@
 		"csurf": "^1.11.0",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
-		"express-graphql": "^0.12.0",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.14.0",
 		"graphql": "^15.8.0",
