--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,7 @@ QUEUE_NAME=render
 GH_CLIENT_ID=secret
 GH_CLIENT_SECRET=secret
 GH_CALLBACK_URL=secret
+GH_WEBHOOK_SECRET=secret
 
 # the base url where this app is deployed.
 URL=secret
