--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
+		"@octokit/webhooks": "^9.23.0",
+		"@octokit/webhooks-types": "^5.5.1",
 		"@types/crypto-js": "^4.1.1",
 		"@types/passport": "^1.0.7",
 		"amqplib": "^0.8.0",
+		"apollo-datasource-mongodb": "^0.5.2",
 		"apollo-server": "^3.6.4",
 		"apollo-server-core": "^3.6.4",
 		"apollo-server-express": "^3.6.4",
