--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,3 +25,6 @@ DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
 
 SESSION_SECRET=secret
 NODE_ENV=development
+
+APOLLO_CORS=true
+RETURN_MOCKS=true
