--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
+		"@graphql-tools/merge": "^8.2.4",
+		"@graphql-tools/resolvers-composition": "^6.4.3",
+		"@graphql-tools/schema": "^8.3.3",
 		"@octokit/webhooks": "^9.23.0",
 		"@octokit/webhooks-types": "^5.5.1",
 		"@types/crypto-js": "^4.1.1",
@@ -37,6 +40,7 @@
 		"helmet": "^5.0.2",
 		"html": "^1.0.0",
 		"jsonschema": "^1.4.0",
+		"lodash": "^4.17.21",
 		"mongodb": "4.3.1",
 		"mongoose": "^6.2.4",
 		"node": "^17.5.0",
@@ -46,6 +50,7 @@
 		"passport-github2": "^0.1.12",
 		"path": "^0.12.7",
 		"ts-node": "^10.7.0",
+		"uuid": "^8.3.2",
 		"winston": "^3.6.0"
 	},
 	"devDependencies": {
@@ -57,6 +62,7 @@
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
 		"@types/node": "^17.0.21",
+		"@types/uuid": "^8.3.4",
 		"gts": "^3.1.0",
 		"typescript": "^4.6.2"
 	}
