--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,18 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon --exec \"ts-node \" ./src/api.ts",
-		"build": "tsc -p ."
+		"build": "tsc -p .",
+		"tailwind:css": "postcss ./src/static/styles/tailwind.css -o ./src/static/style.css"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@aws-sdk/client-sqs": "^3.53.0",
+		"@octokit/auth-app": "^3.6.1",
+		"@octokit/graphql": "^4.8.0",
+		"@octokit/plugin-retry": "^3.0.9",
+		"@octokit/plugin-throttling": "^3.6.2",
+		"@octokit/rest": "^18.12.0",
 		"@octokit/webhooks": "^9.23.0",
 		"@octokit/webhooks-types": "^5.5.1",
 		"@types/crypto-js": "^4.1.1",
@@ -21,6 +27,7 @@
 		"apollo-server": "^3.6.4",
 		"apollo-server-core": "^3.6.4",
 		"apollo-server-express": "^3.6.4",
+		"autoprefixer": "^10.4.4",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"connect-mongo": "^4.6.0",
@@ -41,10 +48,12 @@
 		"mongoose": "^6.2.4",
 		"node": "^17.5.0",
 		"nodemon": "^2.0.15",
-		"octokit": "^1.7.1",
 		"passport": "^0.5.2",
 		"passport-github2": "^0.1.12",
 		"path": "^0.12.7",
+		"postcss": "^8.4.12",
+		"postcss-cli": "^9.1.0",
+		"tailwindcss": "^3.0.23",
 		"ts-node": "^10.7.0",
 		"winston": "^3.6.0"
 	},
