fix helmet cross-origin policies for graphql playground in dev WILL NOT WORK IN PROD UNSAFE

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ FROM node:17-alpine AS base
 
 FROM base as branch-run-development
 WORKDIR /usr/src/frontend
+ENV NODE_ENV "development"
 COPY . .
 COPY package.json ./
 RUN npm install
@@ -20,6 +21,7 @@ RUN npm run build
 
 FROM branchproduction AS branch-run-production
 # RUN npm install --only=production
+ENV NODE_ENV "production"
 COPY --from=branchproduction /usr/src/frontend/build/ .
 RUN npm install serve pm2 -g
 EXPOSE 3000
