--- a/docker-compose-ryan.yml
+++ b/docker-compose-ryan.yml
@@ -72,6 +72,16 @@ services:
     volumes:
       - mongo_data:/data/db
     restart: always
+  mongoexpress:
+    image: mongo-express:0.54
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_AUTH_DATABASE: admin
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+    depends_on:
+      - mongo
 
 volumes:
   mongo_data:
