--- a/worker/package.json
+++ b/worker/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^17.0.21",
     "ajv": "^8.10.0",
     "amqplib": "^0.8.0",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
