--- a/docker-compose-ryan.yml
+++ b/docker-compose-ryan.yml
@@ -1,25 +1,27 @@
 version: '3'
 
 services:
-  # proxy:
-  #   container_name: nginx
-  #   image: nginx:stable-alpine
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #   ports:
-  #    - "80:80"
-  # frontend:
-  #   container_name: frontend
-  #   image: robertnichita/gwiz:frontend
-  #   volumes:
-  #     - ./frontend/:/src/usr/frontend/
-  #   stdin_open: true
-  #   tty: true
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context : ./frontend
-  #   ports:
-  #    - "3000:3000"
+  proxy:
+    container_name: nginx
+    image: nginx:stable-alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+     - "80:80"
+    depends_on:
+      - backend
+      - frontend
+  frontend:
+    container_name: frontend
+    volumes:
+      - ./frontend/:/usr/src/frontend/
+    build:
+      dockerfile: Dockerfile
+      context : ./frontend
+      args:
+        - environment=development
+    ports:
+     - "3000:3000"
   #
   # Backend
   #
