--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
     # Virtual Host Configs
     ##
     upstream server {
-        server backend:5000;
+        server backend:4000;
     }
 
     upstream client {
@@ -66,11 +66,24 @@ http {
                 # proxy_set_header   X-Forwarded-For $remote_addr;
                 # proxy_set_header   Host $http_host;
                 
-                proxy_pass         http://server/;
+                proxy_pass         http://client/;
             }
 
             location /api/ {
                 proxy_pass         http://server/api/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_redirect off;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+
+            location /graphql/ {
+                proxy_pass         http://server/graphql/;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
