--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
      - "80:80"
+    depends_on:
+      - backend
+      - frontend
   frontend:
     container_name: frontend
     image: robertnichita/gwiz:frontend
@@ -18,6 +21,8 @@ services:
     build:
       dockerfile: Dockerfile
       context : ./frontend
+      args:
+        environment: development
     ports:
      - "3000:3000"
   backend:
@@ -27,8 +32,13 @@ services:
       - ./backend/:/src/usr/backend/
     stdin_open: true
     tty: true
+    environment:
+      - DB_HOST=mongo
+      - QUEUE_URL=amqp://rabbitmq:5672
     build:
       dockerfile: Dockerfile
       context : ./backend
+      args:
+        environment : development
     ports:
-     - "5000:5000"
+     - "4000:4000"
