--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "relay": "^0.8.0-1",
