--- a/worker/.env.example
+++ b/worker/.env.example
@@ -7,6 +7,7 @@ AWS_S3_BUCKET=s3://c09-videos/
 # Work Queue
 QUEUE_AMQP_URL=amqp://localhost:5672
 QUEUE_NAME=render
+QUEUE_PREFETCH_LIMIT=5
 
 # CDN
 CDN_ROOT=https://nonsense.cloudfront.net/
