--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-player": "^2.10.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "relay": "^0.8.0-1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
