--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,6 +74,11 @@ http {
                 proxy_pass         http://server/style.css;
                 proxy_pass_request_headers on;
             }
+            location = /link.js {
+                
+                proxy_pass         http://server/link.js;
+                proxy_pass_request_headers on;
+            }
 
             location /api/ {
                 proxy_pass         http://server/api/;
