--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-    "url":"localhost:3000",
-    "api_url":"https://218e-184-148-0-86.ngrok.io/graphql/",
-    "gql_url":"https://218e-184-148-0-86.ngrok.io/graphql/"
+    "url": "localhost:3000",
+    "api_url": "https://f7fa-142-114-249-57.ngrok.io/graphql/",
+    "gql_url": "https://f7fa-142-114-249-57.ngrok.io/graphql/"
 }
