progress commit for private repo cloning / webhook auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,3 +28,4 @@ NODE_ENV=development
 
 APOLLO_CORS=true
 RETURN_MOCKS=true
+# There needs to be a Github App private key file "app.pem" in the /backend directory
