--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,15 @@
-PORT=8080
+PORT=4000
 GRAPHIQL=true
 
 # Queue Config
-QUEUE_URL=amqp://localhost:5672
+QUEUE_URL=amqp://rabbitmq:5672
 QUEUE_NAME=render
 
 # GitHub Config
 GH_CLIENT_ID=secret
 GH_CLIENT_SECRET=secret
-GH_CALLBACK_URL=secret
+GH_APP_ID=secret
+GH_APP_KEY=secret
 GH_WEBHOOK_SECRET=secret
 
 # the base url where this app is deployed.
@@ -19,13 +20,12 @@ DB_USER=secret
 DB_PASS=secret
 DB_HOST=secret
 DB_PORT=secret
-DEV_DB_NAME=secret
-PROD_DB_NAME=secret
+DB_NAME=secret
 DB_OPTIONS="{"retryWrites":"true","w":"majority"}"
 
 SESSION_SECRET=secret
 NODE_ENV=development
 
 APOLLO_CORS=true
-RETURN_MOCKS=true
-# There needs to be a Github App private key file "app.pem" in the /backend directory
+RETURN_MOCKS=false
+# There needs to be a Github App private key file with the name in GH_APP_KEY in the /backend directory
