--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -5,9 +5,9 @@ COPY package*.json ./
 COPY tsconfig*.json ./
 RUN npm ci
 COPY . .
-COPY .env .
 RUN npm install -g typescript pm2
 RUN npm run build
 EXPOSE 4000
 
-CMD ["pm2-runtime","build/src/api.js"]
+# CMD ["pm2-runtime", "start", "build/src/api.js"]
+CMD ["node", "build/src/api.js"]
