--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -5,13 +5,13 @@ WORKDIR /usr/src/frontend
 COPY . .
 # Copy .eslintrc and other dotfiles.
 COPY .* ./
-# RUN npm install react-scripts -g
+ENV DISABLE_ESLINT_PLUGIN "true"
 RUN npm install
 RUN npm run build
 
 ENV NODE_ENV "production"
+
 WORKDIR /usr/src/frontend/build
-RUN npm install serve pm2 -g
+RUN npm install serve -g
 EXPOSE 3000
-# CMD ["pm2", "serve" "." "3000"]
-CMD ["sleep", "10000000"]
+CMD ["serve", "-l", "3000"]
