--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -83,7 +83,7 @@ services:
             - ENC[AES256_GCM,data:bsI9+306RMxV2IpCsFpuQYrXJXOj1sRdJi9R2Xvy1F8dFJDqn4MWyeMcqAs9QfJC7SKF3aEhMqJR/9hzy+cg7i9SsJ3ygJ60b5bAtV8IYc/Pv5c8ovw=,iv:fkZPYceSVW2CTT9HIvIo5mZJzpkmfm3gILOoWx9ZRKU=,tag:CsFB9Y70Uc2Z7DO8wu8Yrg==,type:str]
         ports:
             - ENC[AES256_GCM,data:4qYqoR8=,iv:V6U/3bL7AwjoHKLMVCOWwa78J5X26VsfxIcCjIH7KQY=,tag:y/gXqhF2Ui7Pwlj+V4XcQw==,type:comment]
-            - ENC[AES256_GCM,data:5LNXF8KMJ9eu,iv:doauV55p+8ux8xz5SQU6clY8moCEr7DUbHOw1HFpHP4=,tag:tn6eAxqaccs1SYa8Vz5wPw==,type:str]
+            - ENC[AES256_GCM,data:DjkdhnRoh+T0,iv:BGHvYy2rTob5vgx6X9MlX6hwPrvTob13Kvby+DFRfMA=,tag:JpzWEzJFDHzCy1sZtaUecQ==,type:str]
             - ENC[AES256_GCM,data:MXayw05zAKeyHXYC7Ak=,iv:vfD15WQ1JDhVMGqq712+Ukk+MhSYVpbd1sXw2Zd09f8=,tag:mUIAYeDW7fuzlOGyDLXIEg==,type:comment]
             - ENC[AES256_GCM,data:oGmXXCstBLuH35c=,iv:UEP+oNQeJA+mTnKmwobYzAvv3CUNqCwrkSttFYcieCU=,tag:h4a9847Y3Q8+u2PeIDphGQ==,type:str]
     mongo:
@@ -116,8 +116,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-04-06T18:37:26Z"
-    mac: ENC[AES256_GCM,data:o5XInsOf98Avj4BiKh1N32erMZx0R8nYFYatSj7gxOYECoZeAcUr18xHkpsqWIrO7SieLkfgtx6K3HVLWUWQ+IUWVq1RWUMeldwcJZbzA6fBEe24ZDz0EWZ+2CUYIjhvJQNoMmKF/YbOou1kn3hghZsPYz2Iwmg/YpkwOm03GTw=,iv:YYPhBMAtJJghYPwc0a4gCfmtpIWeKCmHXsqzImtdu7E=,tag:67hW+BnhtEWDgzL+8GM3TA==,type:str]
+    lastmodified: "2022-04-06T18:56:09Z"
+    mac: ENC[AES256_GCM,data:nUALlM8F5t3T8KY5rBQySozLIVgEDwzXVh5FZvM/WJ5iB52oPM5l2Th4h4VddQ7c8cQumr4s4AJ0tzuXDgTV10CGonLiWSHX9ZOIbC72MhXmQB4wigD6yey2OhPRcUnxlgdU7tJShyzqTGdO2og7K4OkVoDdIVTUdW/yhOJpPSg=,iv:nFx6DYHgI1tv/hi9QoNM2Dt40vgTDznij681J3UgfGE=,tag:41lmJMvHl9y9HSdo5TSxOw==,type:str]
     pgp:
         - created_at: "2022-04-05T22:46:25Z"
           enc: |
