--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -12,6 +12,6 @@ RUN npm run build
 ENV NODE_ENV "production"
 
 WORKDIR /usr/src/frontend/build
-RUN npm install serve -g
+RUN npm install serve pm2 -g
 EXPOSE 3000
-CMD ["serve", "-l", "3000"]
+CMD ["sh", "-c", "pm2 serve --spa . 3000"]
