--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -30,7 +30,7 @@ server {
     ssl_trusted_certificate /etc/letsencrypt/live/gource-wizard.ryan.software/chain.pem;
 
     # Load the Diffie-Hellman parameter.
-    # ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
                 
     location = / {
         proxy_set_header   X-Forwarded-For $remote_addr;
