forwarding https header from proxy, set app to trust proxy

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,17 +65,17 @@ http {
             location = / {
                 # proxy_set_header   X-Forwarded-For $remote_addr;
                 # proxy_set_header   Host $http_host;
-                
+                proxy_set_header X-Forwarded-Proto https;
                 proxy_pass         http://server/;
                 proxy_pass_request_headers on;
             }
             location = /style.css {
-                
+                proxy_set_header X-Forwarded-Proto https;
                 proxy_pass         http://server/style.css;
                 proxy_pass_request_headers on;
             }
             location = /link.js {
-                
+                proxy_set_header X-Forwarded-Proto https;
                 proxy_pass         http://server/link.js;
                 proxy_pass_request_headers on;
             }
@@ -83,15 +83,17 @@ http {
             location /api/ {
                 proxy_pass         http://server/api/;
                 proxy_pass_request_headers on;
+                proxy_set_header X-Forwarded-Proto https;
             }
 
             location /graphql/ {
+                proxy_set_header X-Forwarded-Proto https;
                 proxy_pass         http://server/graphql/;
                 proxy_pass_request_headers on;
 		    }
 
             location / {
-                
+                proxy_set_header X-Forwarded-Proto https;
                 proxy_pass          http://client/;
                 proxy_pass_request_headers on;
             }
