--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -35,7 +35,7 @@ server {
     location = / {
         proxy_set_header   X-Forwarded-For $remote_addr;
         proxy_set_header   Host $http_host;
-
+        proxy_set_header X-Forwarded-Proto https;
         proxy_pass         http://server/;
         proxy_pass_request_headers on;
     }
@@ -51,16 +51,19 @@ server {
     }
 
     location /api/ {
+        proxy_set_header X-Forwarded-Proto https;
         proxy_pass         http://server/api/;
         proxy_pass_request_headers on;
     }
 
     location /graphql/ {
+        proxy_set_header X-Forwarded-Proto https;
         proxy_pass         http://server/graphql/;
         proxy_pass_request_headers on;
     }
 
-    location / {                
+    location / {
+        proxy_set_header X-Forwarded-Proto https;                
         proxy_pass          http://client/;
         proxy_pass_request_headers on;
     }
