backend validation progress, added app icon and title added error alert to banner to globally display user input errors from backend

--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -49,6 +49,11 @@ server {
         proxy_pass         http://server/link.js;
         proxy_pass_request_headers on;
     }
+            
+    location = /favicon.ico {
+        proxy_pass         http://server/favicon.ico;
+        proxy_pass_request_headers on;
+    }
 
     location /api/ {
         proxy_set_header X-Forwarded-Proto https;
