--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,6 +79,11 @@ http {
                 proxy_pass         http://server/link.js;
                 proxy_pass_request_headers on;
             }
+            
+            location = /favicon.ico {
+                proxy_pass         http://server/favicon.ico;
+                proxy_pass_request_headers on;
+            }
 
             location /api/ {
                 proxy_pass         http://server/api/;
