--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
 		"html": "^1.0.0",
 		"jsonschema": "^1.4.0",
 		"lodash": "^4.17.21",
+		"mongo-sanitize": "^1.1.0",
 		"mongodb": "4.3.1",
 		"mongoose": "^6.2.4",
 		"node": "^17.5.0",
@@ -71,6 +72,7 @@
 		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
+		"@types/mongo-sanitize": "^1.0.1",
 		"@types/node": "^17.0.21",
 		"@types/uuid": "^8.3.4",
 		"gts": "^3.1.0",
