Deploy stuff and README stuff

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,3 +29,5 @@ NODE_ENV=development
 APOLLO_CORS=true
 RETURN_MOCKS=false
 # There needs to be a Github App private key file with the name in GH_APP_KEY in the /backend directory
+
+WORKER_AUTH_SECRET=potato
